# crystalexplorer

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CrystalExplorer.entitlements  README.md
resources/: CMakeLists.txt  Info.plist  colormaps.json  crystalexplorer.desktop  elementdata.json  elementdata.txt  jmol_colours.json  mesh.qrc  references.json  surface_description.json
src/: CMakeLists.txt  animationsettingsdialog.cpp  asymmetricunit.cpp  asymmetricunit.h  atom.cpp  atom.h  atomid.h  celllimitsdialog.cpp  celllimitsdialog.h  chargedialog.cpp  chargedialog.h  chargedialog.ui  chargemultiplicitypair.h  childpropertycontroller.cpp  childpropertycontroller.h  childpropertycontroller.ui  ciffile.cpp  ciffile.h  closecontactcriteriawidget.cpp  closecontactsdialog.cpp  closecontactsdialog.h  closecontactsdialog.ui  colorschemer.cpp  colorschemer.h  confirmationbox.cpp  confirmationbox.h  crystalcontroller.cpp  crystalcontroller.h  crystalcontroller.ui  crystaldata.cpp  crystaldata.h  crystalexplorer.rc  crystalplanegenerator.cpp  crystalplanegenerator.h  crystalsurfacehandler.cpp  crystalsurfacehandler.h  crystalx.cpp  crystalx.h  crystalx.ui  default_paths.h  (+120 more)
src/config/: CMakeLists.txt  mathconstants.h
src/core/: CMakeLists.txt  adp.cpp  adp.h  atom_label_options.h  atomflags.cpp  atomflags.h  bimap.h  bond_override.h  cell_index.h  chemicalstructure.cpp  chemicalstructure.h  close_contact_criteria.cpp  close_contact_criteria.h  colormap.cpp  colormap.h  computation_provider.h  contact_settings.h  dynamicstructure.cpp  dynamicstructure.h  eigen_json.h  elastic_tensor_results.cpp  elastic_tensor_results.h  element.cpp  element.h  elementdata.cpp  elementdata.h  energy_provider.h  fragment.cpp  fragment.h  fragment_index.cpp  fragment_index.h  frameworkoptions.cpp  frameworkoptions.h  generic_atom_index.cpp  generic_atom_index.h  globalconfiguration.cpp  globalconfiguration.h  globals.h  hbond_criteria.cpp  hbond_criteria.h  (+53 more)
src/crystal/: CMakeLists.txt  crystal_json.cpp  crystal_json.h  crystalfragment.cpp  crystalfragment.h  crystalplane.h  crystalplane_unified.cpp  crystalplane_unified.h  crystalplanegenerator.cpp  crystalplanegenerator.h  crystalstructure.cpp  crystalstructure.h  crystalsurface.cpp  crystalsurface.h  dimer_graph.h  periodicstructure.cpp  periodicstructure.h  slabstructure.cpp  slabstructure.h  slabstructure_old.cpp  surface_cut_generator.cpp  surface_cut_generator.h
src/dialogs/: CMakeLists.txt  aboutcrystalexplorerdialog.cpp  aboutcrystalexplorerdialog.h  aboutcrystalexplorerdialog.ui  animationsettingsdialog.h  animationsettingsdialog.ui  atominfodocument.cpp  atominfodocument.h  celllimitsdialog.cpp  celllimitsdialog.h  celllimitsdialog.ui  closecontactcriteriawidget.cpp  closecontactcriteriawidget.h  closecontactsdialog.cpp  closecontactsdialog.h  collapsibledocument.cpp  collapsibledocument.h  collapsiblegroupbox.cpp  collapsiblegroupbox.h  colordelegate.cpp  colordelegate.h  crystalcutdialog.cpp  crystalcutdialog.h  crystalcutdialog.ui  crystalinfodocument.cpp  crystalinfodocument.h  depthfadingandclippingdialog.cpp  depthfadingandclippingdialog.h  elastictensordialog.cpp  elastictensordialog.h  elastictensorinfodocument.cpp  elastictensorinfodocument.h  elementeditor.cpp  elementeditor.ui  energycalculationdialog.cpp  energycalculationdialog.h  energycalculationdialog.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  (+52 more)
src/exe/: CMakeLists.txt  customenergycalculatortask.cpp  customenergycalculatortask.h  exefileutilities.cpp  exefileutilities.h  externalprogram.cpp  externalprogram.h  filedependency.h  mocktask.cpp  mocktask.h  occ_external.cpp  occ_external.h  occelastictensortask.cpp  occelastictensortask.h  occelattask.cpp  occelattask.h  occpairtask.cpp  occpairtask.h  occsurfacetask.cpp  occsurfacetask.h  occwavefunctiontask.cpp  occwavefunctiontask.h  orcatask.cpp  orcatask.h  task.cpp  task.h  taskbackend.cpp  taskbackend.h  taskmanager.cpp  taskmanager.h  taskmanagerwidget.cpp  taskmanagerwidget.h  test_external_programs.cpp  tonto.cpp  tonto.h  wavefunction_calculator.cpp  wavefunction_calculator.h  xtb_energy_calculator.cpp  xtb_energy_calculator.h  xtbtask.cpp  (+1 more)
src/fingerprint/: CMakeLists.txt  fingerprintplot.cpp  fingerprintplot.h
src/graphics/: CMakeLists.txt  billboardrenderer.cpp  billboardrenderer.h  billboardvertex.h  cameraoptions.h  chemicalstructurerenderer.cpp  chemicalstructurerenderer.h  circlerenderer.cpp  circlerenderer.h  circlevertex.h  colorbarwidget.cpp  colorbarwidget.h  colormap.cpp  colormap.h  crystalplanerenderer.cpp  crystalplanerenderer.h  crystalplanevertex.h  cylinderimpostorrenderer.cpp  cylinderimpostorrenderer.h  cylinderimpostorvertex.h  cylinderrenderer.cpp  cylinderrenderer.h  debugrenderer.cpp  debugrenderer.h  drawingstyle.h  ellipsoidrenderer.cpp  ellipsoidrenderer.h  frameworkrenderer.cpp  frameworkrenderer.h  graphics.cpp  graphics.h  linerenderer.cpp  linerenderer.h  linevertex.h  measurement.cpp  measurement.h  measurementrenderer.cpp  measurementrenderer.h  meshinstancerenderer.cpp  meshinstancerenderer.h  (+32 more)
src/io/: CMakeLists.txt  ciffile.cpp  ciffile.h  crystalclear.cpp  crystalclear.h  elastic_fit_io.cpp  elastic_fit_io.h  fingerprint_eps.cpp  fingerprint_eps.h  genericxyzfile.cpp  genericxyzfile.h  gltf_exporter.cpp  gltf_exporter.h  gulp.cpp  gulp.h  io_utilities.cpp  io_utilities.h  load_elat_json.cpp  load_mesh.cpp  load_mesh.h  load_pair_energy_json.cpp  load_pair_energy_json.h  load_wavefunction.cpp  load_wavefunction.h  load_xtb_json.cpp  load_xtb_json.h  occinput.cpp  occinput.h  orcainput.cpp  orcainput.h  pdbfile.cpp  pdbfile.h  ply_reader.cpp  ply_reader.h  ply_writer.cpp  ply_writer.h  texteditdialog.cpp  (+11 more)
tests/: CMakeLists.txt  elastic_tensor_tests.cpp  interaction_energy_tests.cpp  mesh_tests.cpp  pair_energy_integration_tests.cpp  provider_tests.cpp  test_chemical_structure.cpp  test_core.cpp  test_crystal_structure.cpp  test_io.cpp  test_jobrunner.cpp  test_main.cpp  test_object_tree_model.cpp  test_serialization.cpp  test_task_system.cpp
(+134 files in other folders)
